--- a/tests/st/test_distri_core/test_language_model/test_language_model.yaml
+++ b/tests/st/test_distri_core/test_language_model/test_language_model.yaml
@@ -1,51 +1,81 @@
-training_config:
-  epochs: 1
-  training_iters: 2
-  log_interval: 1
-  loss_scale_value: 1
-  loss_scale_factor: 2
-  loss_scale_window: 1000
-  loss_reduction: "mean"
-
-parallel_config:
+model_parallel:
   tensor_model_parallel_size: 1
   pipeline_model_parallel_size: 1
   context_parallel_size: 1
   expert_model_parallel_size: 1
   sequence_parallel: False
-  recv_dtype: "float32"
-  model_customize_staged: False
-
-model_config:
-  seq_length: 32
-  vocab_size: 128
-  num_layers: 4
-  num_attention_heads: 4
-  hidden_size: 64
-  ffn_hidden_size: 256
+  pipeline_dtype: "float32"
   params_dtype: "float32"
   compute_dtype: "float32"
-  softmax_compute_dtype: "float32"
+  softmax_compute_dtype: "float32" # need add
+
+language_model:
+  num_layers: 4
+  num_attention_heads: 4
+  num_query_groups: 1
+  hidden_size: 64
+  ffn_hidden_size: 256
   hidden_dropout: 0.0
   attention_dropout: 0.0
   init_method: 'normal'
-  position_embedding_type: 'rope'
-  use_final_norm: False
-  use_query_layer: False
-  use_visual_encoder: False
-  fp16_lm_cross_entropy: False
-  untie_embeddings_and_output_weights: False
-  apply_residual_connection_post_norm: False
-  qkv_has_bias: True
-  out_proj_has_bias: False
-  mask_func_type: "attn_mask_add"
-  attention_type: 'self_attn'
+  add_qkv_bias: True
+  add_out_proj_bias: False
+  add_mlp_bias: True
+  mask_func_type: "attn_mask_add" # need add
   normalization: "FusedRMSNorm"
-  norm_epsilon: 0.00001
-  hidden_act: "gelu"
-  mlp_has_bias: True
+  layernorm_epsilon: 0.00001  # norm_epsilon
+  activation_func: "gelu"  # hidden_act
+  num_moe_experts: 1
 
-dataset_config:
-  eod_id: -100
-  batch_size: 8
-  micro_batch_num: 1
+  masked_softmax_fusion: False
+  bias_dropout_fusion: False
+
+  # Must add
+  clone_scatter_output_in_embedding: False
+  attention_softmax_in_fp32: True
+  apply_rope_fusion: False
+  add_bias_linear: False
+
+# data
+seq_length: 32
+vocab_size: 128
+eod_id: -100
+
+# training
+position_embedding_type: 'rope'
+max_position_embeddings: 4096
+epochs: 1
+train_iters: 2
+untie_embeddings_and_output_weights: False
+global_batch_size: 8 #
+micro_batch_size: 1
+clip_grad: 0.0
+train_samples: 0
+transformer_impl: "local"
+use_post_norm: False    
+
+# optimizer
+optimizer: "AdamWeightDecay"
+lr_decay_style: "constant"
+weight_decay_incr_style: "constant"
+clip_grad: 0.0
+
+# distributed arguments
+delay_grad_reduce: False
+
+# loss arguments
+initial_loss_scale: 1  # loss_scale_value
+hysteresis: 2   # loss_scale_factor
+loss_scale_window: 1000
+loss_reduction: "mean"
+fp16_lm_cross_entropy: False # need add
+
+# pangu arguments
+use_query_layer: False
+use_visual_encoder: False
+
+# logging
+log_interval: 1
+
+# custom arguments
+model_customize_staged: False
