--- a/tests/st/test_distri_core/test_mixtral/config_mixtral_large.yaml
+++ b/tests/st/test_distri_core/test_mixtral/config_mixtral_large.yaml
@@ -46,7 +46,6 @@ language_model:
   moe_expert_capacity_factor: -1
   moe_token_drop_policy: null
   moe_pad_expert_input_to_capacity: False
-  use_self_defined_alltoall: False
 
   # miscellaneous
   clone_scatter_output_in_embedding: False
@@ -58,11 +57,11 @@ global_batch_size: 4
 micro_batch_size: 1
 train_iters: 10
 eval_interval: null
-train_samples: 0
 group_query_attention: True
 untie_embeddings_and_output_weights: True
 position_embedding_type: "rope"
 check_for_nan_in_loss_and_grad: False
+max_position_embeddings: 4096
 
 # data
 vocab_size: 32000
@@ -78,7 +77,7 @@ dist_ckpt_format: "ckpt"
 checkpoint_dir: "./data/golden_mixtral_large.pt"
 
 # optimizer
-optimizer: "AdamWeightDecay"
+optimizer: "mint.AdamW"
 lr_decay_style: "constant"
 weight_decay_incr_style: "constant"
 clip_grad: 0.0
@@ -91,6 +90,7 @@ loss_func_kwargs:
 
 # distributed arguments
 delay_grad_reduce: False
+wrap_with_ddp: False
 
 # logging
 log_interval: 1
