--- a/tests/st/test_distri_core/test_optimizer_param_scheduler/test_iteration_tarining.yaml
+++ b/tests/st/test_distri_core/test_optimizer_param_scheduler/test_iteration_tarining.yaml
@@ -22,6 +22,7 @@ pad_token_id: -100
 # trainging
 global_batch_size: 16
 micro_batch_size: 2
+max_position_embeddings: 64
 
 # optimizer
 lr: 3.e-4
@@ -29,8 +30,8 @@ lr_decay_iters: 1320000
 lr_wsd_decay_iters: 0
 lr_warmup_fraction: null
 lr_warmup_iters: 2000
-lr_decay_samples: 0
-lr_wsd_decay_samples: 0
+lr_decay_samples: null
+lr_wsd_decay_samples: null
 lr_warmup_samples: 0
 lr_warmup_init: 0.0
 min_lr: 3.e-5
