--- a/tests/st/test_distri_core/test_parallel_cross_entropy_loss/test_parallel_cross_entropy_loss.yaml
+++ b/tests/st/test_distri_core/test_parallel_cross_entropy_loss/test_parallel_cross_entropy_loss.yaml
@@ -50,7 +50,7 @@ batch_size: 1
 global_batch_size: 1
 micro_batch_size: 1
 clip_grad: 0.0
-train_samples: 0
+train_samples: null
 transformer_impl: "local"
 use_post_norm: False    
 
