--- a/tests/st/test_distri_core/test_self_attention/self_attention_config.yaml
+++ b/tests/st/test_distri_core/test_self_attention/self_attention_config.yaml
@@ -56,6 +56,7 @@ loss_scale_window: 1000
 loss_reduction: "mean"
 # data
 seq_length: 4096
+max_position_embeddings: 4096
 vocab_size: 165664
 data_layout: SBH
 
