--- a/tests/st/test_pynative/test_config/lora.yaml
+++ b/tests/st/test_pynative/test_config/lora.yaml
@@ -62,7 +62,7 @@ untie_embeddings_and_output_weights: False
 global_batch_size: 8
 micro_batch_size: 8
 clip_grad: 0.0
-train_samples: 0
+train_samples: null
 transformer_impl: "local"
 use_post_norm: False    
 
