--- a/tests/st/test_pynative/test_config/vpp.yaml
+++ b/tests/st/test_pynative/test_config/vpp.yaml
@@ -51,7 +51,6 @@ language_model:
   moe_expert_capacity_factor: -1
   moe_token_drop_policy: null
   moe_pad_expert_input_to_capacity: False
-  use_self_defined_alltoall: False
 
   # miscellaneous
   clone_scatter_output_in_embedding: False
@@ -68,11 +67,12 @@ global_batch_size: 2
 micro_batch_size: 1
 train_iters: 10
 eval_interval: null
-train_samples: 0
+train_samples: null
 group_query_attention: True
 untie_embeddings_and_output_weights: True
 position_embedding_type: "rope"
 check_for_nan_in_loss_and_grad: False
+max_position_embeddings: 4
 
 # data
 vocab_size: 64
