--- a/tests/st/test_distri_core/test_ddp_zero3/test_zero3.yaml
+++ b/tests/st/test_distri_core/test_ddp_zero3/test_zero3.yaml
@@ -38,7 +38,8 @@ language_model:
 seq_length: 32
 vocab_size: 128
 eod_id: -100
-micro_batch_size: 1
+global_batch_size: 16
+micro_batch_size: 4
 batch_size: 1
 
 # training
@@ -47,7 +48,6 @@ max_position_embeddings: 4096
 epochs: 1
 train_iters: 2
 untie_embeddings_and_output_weights: False
-global_batch_size: 4 #
 clip_grad: 0.0
 train_samples: 0
 transformer_impl: "local"
