--- a/tests/st/test_distri_core/test_ddp_zero3/test_zero3.yaml
+++ b/tests/st/test_distri_core/test_ddp_zero3/test_zero3.yaml
@@ -61,9 +61,8 @@ use_distributed_optimizer: True
 save: "./saved_ckpt"
 save_interval: 1
 optimizer: "mint.AdamW"
-betas:
-  - 0.9
-  - 0.999
+adam_beta1: 0.9
+adam_beta2: 0.999
 eps: 1.e-8
 weight_decay: 1.e-1
 lr: 1.e-1
