--- a/tests/st/test_distri_core/test_parallel_optimizer/test_parallel_mlp_zero.yaml
+++ b/tests/st/test_distri_core/test_parallel_optimizer/test_parallel_mlp_zero.yaml
@@ -18,8 +18,6 @@ language_model:
   ffn_hidden_size: 64
   hidden_dropout: 0.0
   attention_dropout: 0.0
-  add_out_proj_bias: False
-  add_mlp_bias: True
   normalization: "FusedRMSNorm"
   layernorm_epsilon: 1.e-5  # norm_epsilon
   activation_func: "gelu"  # hidden_act
@@ -30,7 +28,7 @@ language_model:
   clone_scatter_output_in_embedding: False
   attention_softmax_in_fp32: True
   apply_rope_fusion: False
-  add_bias_linear: False
+  add_bias_linear: True
 
 # data
 seq_length: 16
