--- a/tests/st/test_pynative/test_hybrid_context_parallel/test_hybrid_context_parallel.yaml
+++ b/tests/st/test_pynative/test_hybrid_context_parallel/test_hybrid_context_parallel.yaml
@@ -11,7 +11,7 @@ parallel_config:
   tensor_model_parallel_size: 1
   pipeline_model_parallel_size: 1
   context_parallel_size: 8
-  context_parallel_algo: "hybrid_cp_algo" # "hybrid_cp_algo" or "ulysses_cp_algo" or "megatron_cp_algo"
+  context_parallel_algo: "megatron_cp_algo" # "hybrid_cp_algo" or "ulysses_cp_algo" or "megatron_cp_algo"
   ulysses_degree_in_cp: 2
   expert_model_parallel_size: 1
   virtual_pipeline_model_parallel_size: null
