1. support forward_only for vpp 2. support evaluation 3. add timer module 4. add evaluate into pp testcases

--- a/tests/st/test_distri_core/test_checkpoint_args/config_mixtral_small.yaml
+++ b/tests/st/test_distri_core/test_checkpoint_args/config_mixtral_small.yaml
@@ -57,6 +57,7 @@ shape_order: "BSH"
 pre_tockens: 2147483647
 next_tockens: 2147483647
 tokenizer_type: 'NullTokenizer'
+eval_iters: 10
 
 # data
 vocab_size: 64
