--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,18 @@
+numpy>=1.19.2,<2.0.0
+sympy
+decorator
+scipy
+sentencepiece
+einops
+datasets>=2.16.0
 pybind11
+six
+protobuf
+tiktoken
 ninja
 wheel
-numpy
-six
 regex
-decorator
 attrs
 psutil
 pyyaml
-protobuf
-einops
-scipy
-sentencepiece
 pytest
-pandas
