--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,30 @@
+transformers_stream_generator==0.0.5
+sympy==1.13.0
+scikit-learn
+datasets>=2.16.0
+peft==0.7.1
+tiktoken==0.8.0
+tfrecord==1.14.5
+tensorboard==2.18.0
+rouge-metric==1.0.1
+jieba==0.42.1
+iopath==0.1.10
+jsonlines==4.0.0
+timm==1.0.10
+mindstudio-probe==1.0.3
+gpytorch==1.12.0
+orjson==3.10.7
+blobfile==3.0.0
+librosa==0.10.2.post1
 numpy>=1.19.2,<2.0.0
-sympy
+tokenizers>=0.21,<0.22
 decorator
 scipy
 sentencepiece
 einops
-datasets>=2.16.0
 pybind11
 six
 protobuf
-tiktoken
 ninja
 wheel
 regex
@@ -16,3 +32,13 @@ attrs
 psutil
 pyyaml
 pytest
+hydra-core
+ray==2.10.0
+asttokens
+astunparse
+ml_dtypes
+protobuf==3.20.0
+tensordict
+codetiming
+latex2sympy2
+word2number
