--- a/tests/st/net/test_qwen_grpo/configs/grpo_qwen25_7b_A3.yaml
+++ b/tests/st/net/test_qwen_grpo/configs/grpo_qwen25_7b_A3.yaml
@@ -17,9 +17,9 @@ megatron_training:
   use_distributed_optimizer: true
   tokenizer_type: PretrainedFromHF
   tokenizer_name_or_path: /home/workspace/mindspore_dataset/msadapter/test_input/net/test_r1_grpo/Qwen2.5-7B-Instruct/
-  global_batch_size: 4
-  seq_length: 8
-  save_interval: 10000
+  global_batch_size: 2 #32
+  seq_length: 128 #2048
+  save_interval: 200
   train_iters: 3
   stage: ray_grpo
   attention_dropout: 0.0
@@ -27,78 +27,64 @@ megatron_training:
   hidden_dropout: 0.0
   distributed_backend: nccl
   no_shared_storage: true
-  variable_seq_lengths: true
   dataset_additional_keys: ['labels',]
   data_path: /home/workspace/mindspore_dataset/msadapter/test_input/net/test_r1_grpo/pe-nlp/data
   split: 100,0,0
+  no_shuffle: false
+  full_shuffle_instruction_dataset: false
+  ai_framework: mindspore
 
 actor_config:
   model: qwen25_7b
   micro_batch_size: 1
   tensor_model_parallel_size: 4
   pipeline_model_parallel_size: 1
-  lr: 1e-7
+  lr: 1e-6
   lr_decay_style: constant
-  min_lr: 0.0
-  weight_decay: 0.0
+  min_lr: 0
+  weight_decay: 0.01
   lr_warmup_fraction: 0.0
-  clip_grad: 10000.0
+  clip_grad: 1.0
   adam_beta1: 0.9
-  adam_beta2: 0.999
-  initial_loss_scale: 4096
+  adam_beta2: 0.95
   finetune: true
-  load:
-  save:
-  no_load_optim: true
-  no_load_rng: true
-
-ref_config:
-  model: qwen25_7b
-  tensor_model_parallel_size: 2
-  pipeline_model_parallel_size: 1
-  micro_batch_size: 1
-  load:
-  no_load_optim: true
-  no_load_rng: true
-
-reward_config:
-  model: qwen25_7b
-  tensor_model_parallel_size: 2
-  pipeline_model_parallel_size: 1
-  micro_batch_size: 1
-  load:
+  load: ./ckpt
+  save: ./ckpt
   no_load_optim: true
   no_load_rng: true
 
 rl_config:
+  guarantee_order: false
+  use_integrated_worker: true
+  blocking: true
   gamma: 1.0
   lam: 0.95
+  actor_forward_micro_batch_size: 1
+  ref_forward_micro_batch_size: 1
   adv_estimator: group_norm
-  kl_penalty: kl
+  kl_penalty: low_var_kl
   kl_ctrl_type: fixed
-  kl_coef: 0.05
-  missing_eos_penalty: 0.0
-  mini_batch_size: 4
-  num_samples_per_step: 1
-  max_prompt_length: 6
+  init_kl_coef: 0.001
+  mini_batch_size: 2 #32
+  max_prompt_length: 128 #2048
   epochs: 1
   clip_ratio: 0.2
-  entropy_coeff: 0.001
+  entropy_coeff: 0.0
   shuffle_minibatch: false
-  n_samples_per_prompt: 2
-  rule_reward: false
-  colocate_actor_ref: false
-  colocate_all_models: false
+  n_samples_per_prompt: 2 #8
+  rule_reward: true
+  verifier_function: ["base_acc"]
+  verifier_weight: [1.0]
+  num_cpus_for_local_task: 1.0
+  use_tensorboard: false
   actor_resource:
-    num_npus: 4
-  reference_resource:
-    num_npus: 2
-  reward_resource:
-    num_npus: 2
+    num_npus: 8
 
 generate_config:
-  # tokenizer相关配置
   trust_remote_code: true
+  offload_train_optimizer: true
+  offload_train_grad: true
+  offload_train_param: true
 
   # 推理时的并行配置
   infer_tensor_parallel_size: 4
@@ -106,19 +92,18 @@ generate_config:
   infer_expert_parallel_size: 1
 
   # vllm 模型相关设置
-  max_num_seqs: 2
-  max_model_len: 16
+  max_num_seqs: 128 #1024
+  max_model_len: 256 #4096
+  max_num_batched_tokens: 512 #8192
   dtype: "bfloat16"
-  gpu_memory_utilization: 0.6
-  offload_train_optimizer: True
-  offload_train_grad: True
+  gpu_memory_utilization: 0.4
 
   # 采样配置
   sampling_config:
     logprobs: 1
-    max_tokens: 256
-    top_p: 0.9
-    top_k: 50
-    min_p: 0.01
-    temperature: 0.9
+    max_tokens: 4 #2048
+    top_p: 1.0
+    top_k: -1
+    min_p: 0.0
+    temperature: 1.0
     detokenize: false
