Prune Qwen25 7b test case network

--- a/tests/st/net/test_qwen_grpo/configs/model/qwen25_7b.yaml
+++ b/tests/st/net/test_qwen_grpo/configs/model/qwen25_7b.yaml
@@ -1,6 +1,6 @@
 qwen25_7b:
   use_mcore_models: true
-  num_layers: 28
+  num_layers: 2 #28
   hidden_size: 3584
   ffn_hidden_size: 18944
   num_attention_heads: 28
